--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-numpy==1.26.4
-pandas==2.2.2
-matplotlib==3.9.2
-librosa==0.10.2.post1
-tqdm==4.66.5
+numpy
+pandas
+librosa
+soundfile
+tqdm
+scipy
+matplotlib
+scikit-learn
+torch
+torchaudio
